first implementation of Subscribe

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,8 @@
         "--workdir=.",
         "--roothttp=.",
         "--token=",
+        "--tracereq=all",
+        "--traceapi=all",
         "--verbose",
         "--verbose",
         "--verbose",
