launch.json: Match binder new name and path

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,13 @@
       "name": "Kingpigeon - gcc build and debug active file",
       "type": "cppdbg",
       "request": "launch",
-      "program": "/opt/RP/bin/afb-daemon",
+      "program": "/usr/bin/afb-binder",
       "args": [
         "--name=redpesk-kingpigeonM150-config",
         "--port=1234",
         "--ldpaths=.",
         "--workdir=.",
         "--roothttp=./htdocs",
-        "--token=",
         "--tracereq=all",
         "--traceapi=all",
         "--verbose",
