Generate Master DCF at build

--- a/conf.d/project/etc/CMakeLists.txt
+++ b/conf.d/project/etc/CMakeLists.txt
@@ -31,7 +31,42 @@ PROJECT_TARGET_ADD(CANopen-config)
 
 	add_input_files("${CONF_FILES}")
 
-	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
-	LABELS "BINDING-CONFIG"
-	OUTPUT_NAME ${TARGET_NAME}
+	######################################################################
+	# Genegating master dcf file if a yml file is availe for eatch config
+	######################################################################
+
+	foreach(CONF_FILE ${CONF_FILES})
+		
+		get_filename_component(CONF_DIR ${CONF_FILE} NAME_WLE)
+		
+		file(GLOB YML_CONF "${CONF_DIR}/*.yml")
+		
+		if(EXISTS ${YML_CONF})
+
+			set(OUT_DIR "${PROJECT_PKG_BUILD_DIR}/etc/${CONF_DIR}")
+
+			file(MAKE_DIRECTORY ${OUT_DIR})
+
+			add_custom_command(OUTPUT "${OUT_DIR}/master.dcf"
+				DEPENDS ${YML_CONF}
+				COMMAND dcfgen -r -d ${OUT_DIR} ${YML_CONF}
+				WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${CONF_DIR}"
+			)
+
+			add_custom_target(
+				${CONF_DIR}_genereted_master
+				DEPENDS "${OUT_DIR}/master.dcf"
+				COMMENT "Build mastes.dcf based on yml shema : ${YML_CONF}"
+			)
+
+			add_dependencies(${TARGET_NAME} ${CONF_DIR}_genereted_master)
+			
+		endif()
+
+	endforeach()
+
+	SET_TARGET_PROPERTIES(
+		${TARGET_NAME} PROPERTIES
+		LABELS "BINDING-CONFIG"
+		OUTPUT_NAME ${TARGET_NAME}
 	)
