--- a/src/CANopen.pc.in
+++ b/src/CANopen.pc.in
@@ -9,5 +9,5 @@ Version: @PROJECT_VERSION@
 
 Requires:
 Libs: -L${libdir} -lafb-@TARGET_NAME@
-Cflags: -I${includedir}%
+Cflags: -I${includedir} -I${includedir}/@PROJECT_NAME@
 
