--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 ###########################################################################
 #  Copyright (C) 2015-2020 IoT.bzh Company
-# 
+#
 #  Author: Johann Gautier <johann.gautier@iot.bzh>
-# 
+#
 #  $RP_BEGIN_LICENSE$
 #  Commercial License Usage
 #   Licensees holding valid commercial IoT.bzh licenses may use this file in
@@ -11,7 +11,7 @@
 #   a written agreement between you and The IoT.bzh Company. For licensing terms
 #   and conditions see https://www.iot.bzh/terms-conditions. For further
 #   information use the contact form at https://www.iot.bzh/contact.
-# 
+#
 #  GNU General Public License Usage
 #   Alternatively, this file may be used under the terms of the GNU General
 #   Public license version 3. This license is as published by the Free Software
@@ -22,57 +22,62 @@
 #  $RP_END_LICENSE$
 ###########################################################################
 
-# Add target to project dependency list
-PROJECT_TARGET_ADD(CANopenEncoder)
-	# Define project Targets
-	add_library(${TARGET_NAME} SHARED
-					CANopenEncoder.cpp
-					CANopenGlue.cpp
-					)
+add_library(CANopenEncoder SHARED
+		CANopenEncoder.cpp
+		CANopenGlue.cpp
+	)
+target_link_libraries(CANopenEncoder ${link_libraries})
 
-	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
-		LABELS "LIBRARY"
-		IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/lib${TARGET_NAME}.so
+INSTALL(TARGETS
+		CANopenEncoder
+		DESTINATION
+		${APP_DIR}/lib
 	)
 
-# Add target to project dependency list
-PROJECT_TARGET_ADD(CANopen)
+#SET_TARGET_PROPERTIES(CANopenEncoder PROPERTIES
+#	IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/libCANopenEncoder.so
+#)
 
-	# compile any C file starting with a lower case
-	file(GLOB CHEADERS *.hpp utils/*.hpp)
-
-	# Define project Targets
-	add_library(${TARGET_NAME} MODULE
-					CANopenMaster.cpp
-					CANopenBinding.cpp
-					CANopenSensor.cpp
-					CANopenSlaveDriver.cpp
-					utils/utils.c
-					)
-
-	# Binder exposes a unique public entry point
-	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
-		PREFIX "afb-"
-		LABELS "BINDING"
-		LINK_FLAGS ${BINDINGS_LINK_FLAG}
-		INSTALL_RPATH "$ORIGIN"
-		IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/*${TARGET_NAME}.so
-		OUTPUT_NAME ${TARGET_NAME}
+# Define project Targets
+add_library(CANopen MODULE
+		CANopenBinding.cpp
+		CANopenMaster.cpp
+		CANopenExec.cpp
+		CANopenSensor.cpp
+		CANopenSlaveDriver.cpp
+		utils/utils.cpp
 	)
 
-	target_link_libraries(${TARGET_NAME} ${link_libraries} CANopenEncoder)
+INSTALL(TARGETS
+		CANopen
+		DESTINATION
+		${APP_DIR}/lib
+	)
 
-INSTALL(FILES ${CHEADERS}
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-    )
+# Binder exposes a unique public entry point
+SET_TARGET_PROPERTIES(CANopen PROPERTIES
+	PREFIX ""
+	LINK_FLAGS "-Wl,--version-script=${vscript}"
+	INSTALL_RPATH "$ORIGIN"
+#	IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/*${TARGET_NAME}.so
+)
+target_link_libraries(CANopen ${link_libraries} CANopenEncoder)
 
-include(GNUInstallDirs)
-configure_file(../${TARGET_NAME}.pc.in ${TARGET_NAME}.pc @ONLY)
-
+configure_file(manifest.yml.in manifest.yml @ONLY)
 INSTALL(FILES
-		${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}.pc
+		${CMAKE_CURRENT_BINARY_DIR}/manifest.yml
+		DESTINATION
+		${APP_DIR}/.rpconfig
+	)
+
+# compile any C file starting with a lower case
+file(GLOB CHEADERS *.hpp)
+INSTALL(FILES ${CHEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/CANopen)
+
+configure_file(CANopen.pc.in CANopen.pc @ONLY)
+INSTALL(FILES
+		${CMAKE_CURRENT_BINARY_DIR}/CANopen.pc
 		DESTINATION
         ${CMAKE_INSTALL_LIBDIR}/pkgconfig
 	)
 
-add_subdirectory("plugins")
