--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -24,5 +24,4 @@
 
 ###########################################################################
 
-# This component should be included as a submodule and wont compile as standalone
-project_subdirs_add()
+add_subdirectory(kingpigeon)
