--- a/tests/test-kp-M150/canopen-kingpigeonM150-config/gen_master.yml
+++ b/tests/test-kp-M150/canopen-kingpigeonM150-config/gen_master.yml
@@ -32,37 +32,37 @@ slave_2:
   # revision_number: 0x12345678
   # serial_number: 0x12345678
   # heartbeat_multiplier: 3.0
-  # heartbeat_consumer: false
-  heartbeat_producer: 1000 # ms
+  heartbeat_consumer: false
+  heartbeat_producer: false # 1000 # ms
   # error_behavior: {}
-  rpdo:
-    1:
-  #     enabled: true
-  #     # cob_id: auto
-        transmission: 0x01
-  #     # inhibit_time: 0 # 100 us
-  #     # event_timer: 0 # ms
-        mapping:
-          - {index: 0x6000, sub_index: 0x01}
-    2:
-      enabled: true
-  #     # cob_id: auto
-  #     # transmission: 0x01
-  #     # inhibit_time: 0 # 100 us
-  #     # event_timer: 0 # ms
-      mapping:
-        - {index: 0x6401, sub_index: 0x01}
-        - {index: 0x6401, sub_index: 0x02}
-  tpdo:
-    1:
-      enabled: true
-  #     # cob_id: auto
-  #     # transmission: 0x01
-  #     # inhibit_time: 0 # 100 us
-  #     # event_timer: 0 # ms
-  #     # sync_start: 0
-      mapping:
-        - {index: 0x6200, sub_index: 0x01}
+  # rpdo:
+  #   1:
+  #      enabled: true
+  #      # cob_id: auto
+  #      # transmission: 0x01
+  #      # inhibit_time: 0 # 100 us
+  #      # event_timer: 0 # ms
+  #      mapping:
+  #       - {index: 0x6000, sub_index: 0x01}
+  #   2:
+  #      enabled: true
+  #      # cob_id: auto
+  #      # transmission: 0x01
+  #      # inhibit_time: 0 # 100 us
+  #      # event_timer: 0 # ms
+  #      mapping:
+  #       - {index: 0x6401, sub_index: 0x01}
+  #       - {index: 0x6401, sub_index: 0x02}
+  # tpdo:
+  #   1:
+  #      enabled: true
+  #      # cob_id: auto
+  #      # transmission: 0x01
+  #      # inhibit_time: 0 # 100 us
+  #      # event_timer: 0 # ms
+  #      # sync_start: 0
+  #      mapping:
+  #       - {index: 0x6200, sub_index: 0x01}
   # boot: true
   # mandatory: false
   # reset_communication: true
@@ -72,3 +72,5 @@ slave_2:
   sdo:
     - {index: 0x1800, sub_index: 0x05, value: 0}
     - {index: 0x1802, sub_index: 0x05, value: 0}
+    - {index: 0x1016, sub_index: 0x01, value: 0x14000}
+    - {index: 0x1017, sub_index: 0x00, value: 0x4000}
