Extract json-c helper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(CANopen MODULE
 		CANopenSensor.cpp
 		CANopenSlaveDriver.cpp
 		utils/utils.cpp
+		utils/jsonc.cpp
 	)
 
 INSTALL(TARGETS
