--- a/src/CANopen.pc.in
+++ b/src/CANopen.pc.in
@@ -1,13 +1,11 @@
-prefix=@CMAKE_INSTALL_PREFIX@
-exec_prefix=${prefix}
-libdir=${exec_prefix}/@CMAKE_INSTALL_LIBDIR@
-includedir=${prefix}/include
+libdir=@CMAKE_INSTALL_FULL_LIBDIR@
+includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 
 Name: @PROJECT_NAME@
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 
-Requires:
-Libs: -L${libdir} -lafb-@TARGET_NAME@
+Requires: json-c
+Libs: -L${libdir} -lCANopenEncoder
 Cflags: -I${includedir} -I${includedir}/@PROJECT_NAME@
 
