--- a/docs/api-services-book.yml
+++ b/docs/api-services-book.yml
@@ -14,7 +14,13 @@ books:
       name: Installation Guide
     - url: 3-configuration.md
       name: Configuration
-    - url: 4-running_and_testing.md
+    - url: 4-dcf-lely
+      name: Using DCF and liblely tools
+    - url: 5-running_and_testing.md
       name: Running and Testing
-    - url: 5-binary-interface.md
+    - url: 6-canopen-api.md
+      name: API of CANopen binding
+    - url: 7-binary-interface.md
       name: Using binary interface
+    - url: 8-usign-dcf2afb.md
+      name: Using dcf2afb converter tool
